[gd_scene load_steps=11 format=3 uid="uid://cpsm4c7dfob44"]

[ext_resource type="Script" path="res://Scripts/inventory/inventory_ui.gd" id="1_7l5o7"]
[ext_resource type="Theme" uid="uid://cnijpvvboopqv" path="res://Themes/base_font_styles.tres" id="2_cdx23"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0lvsb"]
content_margin_left = 8.0
content_margin_top = 12.0
content_margin_right = 8.0
content_margin_bottom = 12.0
bg_color = Color(0.508609, 0.215101, 0.340231, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ht2un"]
content_margin_left = 8.0
content_margin_top = 12.0
content_margin_right = 8.0
content_margin_bottom = 12.0
bg_color = Color(0.479514, 0.200083, 0.319383, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7hr04"]
content_margin_left = 8.0
content_margin_top = 12.0
content_margin_right = 8.0
content_margin_bottom = 12.0
bg_color = Color(0.62678, 0.28072, 0.426874, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fbylj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_frjad"]
content_margin_left = 8.0
content_margin_top = 12.0
content_margin_right = 8.0
content_margin_bottom = 12.0
bg_color = Color(0.215686, 0.368627, 0.537255, 0.764706)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n2tff"]
content_margin_left = 8.0
content_margin_top = 12.0
content_margin_right = 8.0
content_margin_bottom = 12.0
bg_color = Color(0.213755, 0.366672, 0.536385, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5pjae"]
content_margin_left = 8.0
content_margin_top = 12.0
content_margin_right = 8.0
content_margin_bottom = 12.0
bg_color = Color(0.432832, 0.613979, 0.819242, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rcu2f"]
content_margin_left = 8.0
content_margin_top = 12.0
content_margin_right = 8.0
content_margin_bottom = 12.0
bg_color = Color(0.213755, 0.366672, 0.536385, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_7l5o7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.368627, 0.52549, 0.658824, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 40
theme_override_constants/v_separation = 40
columns = 5

[node name="ItemInformation" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/ItemInformation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.988235, 0.984314, 0.941176, 1)

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/ItemInformation"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ItemInformation/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="ItemName" type="RichTextLabel" parent="HBoxContainer/ItemInformation/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme = ExtResource("2_cdx23")
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[center][b]Item Name"

[node name="ItemPrice" type="RichTextLabel" parent="HBoxContainer/ItemInformation/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme = ExtResource("2_cdx23")
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[center]$1.50"

[node name="ItemDescription" type="RichTextLabel" parent="HBoxContainer/ItemInformation/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("2_cdx23")
theme_override_colors/default_color = Color(0, 0, 0, 1)
bbcode_enabled = true
text = "[center]Item description information"

[node name="CloseButton" type="Button" parent="HBoxContainer/ItemInformation/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_cdx23")
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0lvsb")
theme_override_styles/hover = SubResource("StyleBoxFlat_ht2un")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ht2un")
theme_override_styles/normal = SubResource("StyleBoxFlat_7hr04")
text = "Close"

[node name="ChecklistButton" type="Button" parent="HBoxContainer/ItemInformation/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("2_cdx23")
theme_override_colors/font_disabled_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(1, 1, 1, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_fbylj")
theme_override_styles/disabled = SubResource("StyleBoxFlat_frjad")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_n2tff")
theme_override_styles/hover = SubResource("StyleBoxFlat_5pjae")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5pjae")
theme_override_styles/normal = SubResource("StyleBoxFlat_rcu2f")
text = "My Checklist"

[connection signal="pressed" from="HBoxContainer/ItemInformation/MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="HBoxContainer/ItemInformation/MarginContainer/VBoxContainer/ChecklistButton" to="." method="_on_checklist_button_pressed"]
